add sample data generated from the strong app

--- a/gravitus_to_strong.ipynb
+++ b/gravitus_to_strong.ipynb
@@ -13,10 +13,10 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "GRAVITUS_DATA_PATH=\"./user_data_1739476833.csv\"\n",
-    "STRONG_DATA_PATH=\"./strong.csv\"\n",
+    "GRAVITUS_DATA_PATH=\"./gravitus.csv\"\n",
+    "STRONG_DATA_PATH=\"./data/strong.csv\"\n",
     "\n",
-    "GRAVITUS_OUTPUT_DIR = \"./gravitus_data\""
+    "GRAVITUS_OUTPUT_DIR = \"./data/gravitus_data\""
    ]
   },
   {
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "36e8f90e-f6bc-41d3-b64c-5606f21c7bd6",
    "metadata": {},
    "outputs": [],
